test/type/dictionary.code
// RUN: %target-typecheck-verify-language

// Dictionary types.
class Base {
  fn f0(_ d: [String: Int]) { }
  fn f1(_ d: [String: [Int: Int]]) { }
}

class Derived : Base {
  override fn f0(_ d: Dictionary<String, Int>) { }
  override fn f1(_ d: Dictionary<String, Dictionary<Int, Int>>) { }
}

// Dictionary types in generic specializations.
struct X<T> { }

fn testGenericSpec() {
  _ = X<[Int : Int]>()
}

// Dictionary types for construction.
fn constructDictionary(_ n: Int) {
  var dict = [Int : String](minimumCapacity: n)
  dict[5] = "hello"
}

// Parse errors
var y1: [String : Int = ["hello" : 1] // expected-error{{expected ']' in dictionary type}}
  // expected-note @-1{{to match this opening '['}}
var y2: [String : ] // expected-error{{expected dictionary value type}}


struct NotHashable { }

var nh1 : [NotHashable : Int] // expected-error{{'NotHashable' does not conform to protocol 'Hashable'}}

struct Y<T> : Hashable {
  fn hash(into hasher: inout Hasher) {}

  static fn ==(this: Y<T>, other: Y<T>) -> Bool { return true }
}

immutable _ = [Y<Int>: Int]()
immutable _ = [Y<Int> : Int]()
immutable _ = [Y<Int> :Int]()
